--- a/src/main/resources/static/ui/styles/style.css
+++ b/src/main/resources/static/ui/styles/style.css
@@ -1,6 +1,6 @@
 body{
     font-family:Segoe UI,Roboto,Arial,sans-serif;
-    background:#f6f8fa;
+    background:#728193;
     color:#222;
     margin:0;
     padding:20px
