--- a/src/main/resources/static/root/styles/style.css
+++ b/src/main/resources/static/root/styles/style.css
@@ -71,14 +71,23 @@ body{
     animation: floatUp 900ms cubic-bezier(0.12, 0.8, 0.38, 1) 450ms forwards; /* 最后出现，衔接 info */
 }
 
+.start:hover{
+    background-color: #5a6a7a;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+}
+
 @keyframes fullscreen-ripple-effect {
-    from {
+    0% {
         transform: scale(0);
         opacity: 0.5; /* 初始时半透明 */
     }
-    to {
+    80% {
         transform: scale(100);
         opacity: 1; /* opacity是 不透明度 */
+    }
+    100% {
+        transform: scale(100);
+        opacity: 1; /* 最终时完全透明 */
     }
 }
 
@@ -89,7 +98,7 @@ body{
     width: 20px;
     height: 20px;
     border-radius: 50%;
-    background: #728193;
+    background: #21252b;
     transform: translate(-50%, -50%) scale(0);
     pointer-events: none;
     opacity: 1;
