Refactored the routes in backend and added an edit interface in frontend

--- a/src/main/resources/static/menu/templates/add_member_form.html
+++ b/src/main/resources/static/menu/templates/add_member_form.html
@@ -3,7 +3,7 @@
         <h1 class="member-detail__name">New Member</h1>
         <div class="member-meta-row">
             <span class="member-detail__id">ID: Auto-Generated</span>
-            <span class="member-status status-official">Draft</span>
+            <span class="member-status status-intern">Draft</span>
         </div>
     </header>
 
@@ -52,13 +52,14 @@
             <label class="label" style="margin-bottom: 12px; display: block;">Membership Status</label>
             <div class="status-toggle-group">
                 <label class="radio-label">
-                    <input type="radio" name="isProbation" value="false" checked>
-                    <span class="radio-custom status-official">Official</span>
-                </label>
-                <label class="radio-label">
-                    <input type="radio" name="isProbation" value="true">
+                    <input type="radio" name="isProbation" value="true" checked>
                     <span class="radio-custom status-intern">Intern</span>
                 </label>
+                <label class="radio-label">
+                    <input type="radio" name="isProbation" value="false">
+                    <span class="radio-custom status-official">Official</span>
+                </label>
+                
             </div>
         </div>
 
