--- a/src/main/resources/static/menu/templates/member_detail.html
+++ b/src/main/resources/static/menu/templates/member_detail.html
@@ -15,6 +15,7 @@
                     <div class="promote-popover__title">Promote this member?</div>
                     <div class="promote-popover__hint">{{name}} (ID: {{id}})</div>
                     <div class="promote-popover__actions">
+                        <div id="promote-result"></div>
                         <button type="button" class="popover-btn popover-btn--cancel" data-action="cancel-promote">Cancel</button>
                         <button type="button" class="popover-btn popover-btn--promote" data-action="confirm-promote">Promote</button>
                     </div>
@@ -30,6 +31,7 @@
                     <div class="demote-popover__title">Demote this member?</div>
                     <div class="demote-popover__hint">{{name}} (ID: {{id}})</div>
                     <div class="demote-popover__actions">
+                        <div id="demote-result"></div>
                         <button type="button" class="popover-btn popover-btn--cancel" data-action="cancel-demote">Cancel</button>
                         <button type="button" class="popover-btn popover-btn--demote" data-action="confirm-demote">Demote</button>
                     </div>
@@ -52,7 +54,7 @@
                     <div class="delete-popover__hint">{{name}} (ID: {{id}})</div>
                     <div class="delete-popover__actions">
                         <button type="button" class="popover-btn popover-btn--cancel" data-action="cancel-delete">Cancel</button>
-                        <button type="button" class="popover-btn popover-btn--danger" data-action="confirm-delete">Delete</button>
+                        <button type="button" class="popover-btn popover-btn--danger" data-action="confirm-delete">Delete</button>  
                     </div>
                 </div>
             </div>
